# Rust-API-template

./: .env.sample  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNDING.json  LICENSE  README.md  build.rs  compose.yaml  shell.nix
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml  QUESTION-FORM.yml  config.yml
.github/workflows/: release.yml
certs/: cert.pem
github-not-done/: bench.yml
keys/: example.cert_key.pem
src/lib/: error.rs  lib.rs
src/lib/models/: identity.rs
src/lib/runtime/: args.rs  mod.rs
src/lib/utils/: mod.rs
src/lib/utils/cryptography/: aes.rs  sha256.rs
