[package]
name = "rust-api-template"
version = "0.1.0"
edition = "2021"
authors = ["AlphaDragon"]

[dependencies]
log = "0.4"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["serde", "v4"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.1", default-features = false }
once_cell = "1.20"
###
axum = {version = "0.8.1", features = ["macros"]}
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = "0.10.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace", "timeout", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3"
tower_governor = { version = "0.6", features = ["axum", "tracing"] }
utoipa = "5.3"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
enum-iterator = "2.1.0"
http-body-util = "0.1.2"

[dev-dependencies]
http-body-util = "0.1.2"
aes = "0.8.4"
block-modes = "0.9.1"
hex-literal = "0.4.1"
hex = "0.4.3"
futures-util = "0.3.31"

[[bin]]
name = "api"
path = "src/bin/main.rs"

[lib]
name = "api_lib"
path = "src/lib/lib.rs"